2004-09-30  Andy Wingo  <wingo@pobox.com>

	* package.ac: Require libgda < 1.1.

	* defs-extra-checks.ac: New file.

	* Makefile.am (EXTRA_DIST): Dist the .ac files.

2004-09-15  Andy Wingo  <wingo@pobox.com>

	* gnome/Makefile.am: Dist the overrides dir.

	* glib-checks.ac: Check the right module.

2004-09-14  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libgda-spec.scm: Add copyright block. Adapt to newer
	API.

	* gnome/gw/Makefile.am
	(nodist_libgw_guile_gnome_libgda_la_SOURCES): Don't dist generated
	files.

	* gnome/gda.scm: Add a copyright block, use new module names.

	* ChangeLog: All changelogs merged, with non-gda items elided.

2003-12-07  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gda-support.c (scm_c_gda_value_set)
	(scm_gda_value_primitive_get): Support for string and number types.

	* gnome/gw/gw-gda-spec.scm: Support GdaValue and GdaCommand.
	
	* gnome/gw/gda-support.c, gda-support.h: New files.
	* gnome/gw/Makefile.am: Snarfing support.

2003-12-07  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gda.scm: Support for GdaValue reworked, GdaCommand added.

2003-12-07  Andreas Rottmann  <a.rottmann@gmx.at>

	* configure.in: Check for libgda >= 0.15.0 (we need new API).

2003-11-30  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gw-gda-spec.scm: Added support for <gda-value>.

	* gnome/gw/Makefile.am: Adapted.
	* gnome/gw/gda-support.c, gda-support.h: New files.

2003-11-30  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gda.scm (scm->gda-value): New procedure.
	(value): New accessor, providing method for <gda-value>.

2003-11-26  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/Makefile.am, gw-gda-spec.scm: New files.

2003-11-26  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gda.scm: New file.

	* gnome/Makefile.am (SUBDIRS): Conditionally add gda.
	
	* gnome/Makefile.am: Simplified conditional structure a bit.