@@ -1,3 +1,3 @@
-PKG_CHECK_MODULES(GUILE_GLIB, guile-gnome-glib)
+PKG_CHECK_MODULES(GUILE_GLIB, guile-gnome-glib-$API_VERSION)
 AC_SUBST(GUILE_GLIB_CFLAGS)
 AC_SUBST(GUILE_GLIB_LIBS)
