@@ -12,7 +12,7 @@ EXTRA_DIST = libgda-spec.scm
 # There is one shared library for each wrapset. Each is produced by
 # g-wrap, but also may contain some hand-coded routines.
 
-lib_LTLIBRARIES = libgw-guile-gnome-libgda.la
+guilegnomelib_LTLIBRARIES = libgw-guile-gnome-libgda.la
 
 ########################################################################
 ## gda
